# Autonomous-Driving-Gym

./: .gitignore  README.md  bootstrap_parallel_self_play.py  modify.md  modify_plan.md  pyproject.toml  reimplement_plan.md  test_observation_update.py
AlphaZero-adversarial-autonomous-driving/: README.md  setup.py
AlphaZero-based-autonomous-driving/: setup.py
AlphaZero-meta-adversarial-autonomous-driving/: README.md  setup.py
configs/: highway.yaml  racetrack.yaml
docs/: README.md
legacy/: README.md
notebooks/: README.md  analyze_progressive_self_play.ipynb
scripts/: 01_self_play_parallel.ipynb  01_self_play_parallel_racetrack.ipynb  02_train_from_self_play.ipynb  03_loop_self_play_train.ipynb  README.md  run_adversarial_render_steps.sh  run_adversarial_self_play_dual_gpu_kaggle.sh  run_meta_adversarial_self_play.sh  run_meta_adversarial_self_play_dual_gpu_kaggle.sh  run_meta_adversarial_train.sh  run_ppo_evolutionary_infer_local.sh  run_ppo_evolutionary_train_kaggle.sh  run_ppo_traditional_infer_local.sh  run_ppo_traditional_resume_local.sh  run_ppo_traditional_train_kaggle.sh  run_ppo_traditional_train_local.sh  run_progressive_self_play.sh  run_progressive_self_play_gpu.sh  run_progressive_self_play_highway.sh  run_progressive_self_play_highway_dual_gpu_kaggle.sh  run_progressive_self_play_highway_gpu.sh  run_progressive_train.sh
source/: README.md
tests/: conftest.py  test_meta_adversarial_target_vector.py  test_meta_self_play_replay.py  test_ppo_evolutionary_config.py  test_ppo_evolutionary_evolution.py  test_ppo_evolutionary_rewards.py  (+11 more)
(+213 files in other folders)
